apps/pihole/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: pihole-dns-gateway
  namespace: pihole
spec:
  gatewayClassName: envoy-gateway
  addresses:
  - type: IPAddress
    value: 192.168.1.25
  listeners:
  - name: dns-tcp
    protocol: TCP
    port: 53
  - name: dns-udp
    protocol: UDP
    port: 53
