apps/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole-web
spec:
  parentRefs:
  - name: mdch-lab-gateway
    namespace: cilium
  hostnames:
  - "pihole.mdch-lab.dev"
  rules:
  - matches:
    - path:
        type: Exact
        value: "/"
    filters:
    - type: RequestRedirect
      requestRedirect:
        path:
          type: ReplaceFullPath
          replaceFullPath: /admin/login
        statusCode: 302 
  - backendRefs:
    - name: pihole-web
      port: 80
