apps/pihole/routes.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: pihole-dns-tcp
  namespace: pihole
spec:
  parentRefs:
  - name: pihole-dns-gateway
    sectionName: dns-tcp
  rules:
  - backendRefs:
    - name: pihole-dns
      port: 53
